
	* libfreeipmi/src/fiid.h, libfreeipmi/src/fiid.c: Re-implemented
	with new, more abstract interface.

	* libfreeipmi/src/bit-ops.c (bits_extract, bits_merge): Add parameter checks.

	* libfreeipmi/src/bit-ops.c (bits_merge): Fix bit shifting bug.

	* Support new fiid interface globally.

------------------------------------------------------------
2006-02-03  Albert Chu <chu11@llnl.gov>	

	* Support new fiid in fish.
	
2006-02-02  Albert Chu <chu11@llnl.gov>	

	* libfreeipmi/src/ipmi-sdr-record-types.c,
	libfreeipmi/src/ipmi-sdr-repo-cache.c,
	libfreeipmi/src/ipmi-sensor-utils.c,
	libfreeipmi/src/ipmi-sensor-api.c,
	libfreeipmi/src/ipmi-sel-cmds.c,
	libfreeipmi/src/ipmi-sensor-event-messages.c,
	libfreeipmi/src/ipmi-sdr-repo-cmds.c,
	libfreeipmi/src/ipmi-sol-cmds.c, libfreeipmi/src/ipmi-pef-cmds.c,
	libfreeipmi/src/ipmi-sensor-types.c,
	libfreeipmi/src/ipmi-serial-cmds.c, ipmi-sel-record-types.c,
	libfreeipmi/src/ipmi-sensor-cmds.c: Continue fiid reimplementation
	in libfreeipmi.
	
2006-02-01  Albert Chu <chu11@llnl.gov>	

	* libfreeipmi/src/ipmi-msg-support-cmds.c,
	libfreeipmi/src/ipmi-lan-cmds.c: Continue fiid reimplementation in
	libfreeipmi.

	* libfreeipmi/src/ipmi-lan-cmds.c (ipmi_cmd_lan_get_conf_param,
	fill_lan_set_conf_param): New functions.
	
2006-01-31  Albert Chu <chu11@llnl.gov>	

	* Support garpd, ipmi-locate, bmc-info, ipmi-raw.

	* Various other library support.
	
2006-01-30  Albert Chu <chu11@llnl.gov>	

	* libfreeipmi/src, bmc-watchdog/src: Support new fiid
	reimplementation for bmc-watchdog.

2006-01-29  Albert Chu <chu11@llnl.gov>	

	* libfreeipmi/src/,ipmipower/src: Support new fiid interface for
	ipmipower.

	* libfreeipmi/src/ipmi-sessions.c (fill_hdr_session),
	libfreeipmi/src/ipmi-lan-interface.c (assemble_ipmi_lan_pkt): Move
	ipmi_msg_len calculation into assemble_ipmi_lan_pkt.

	* libfreeipmi/src/ipmi-sessions.c (check_hdr_session_authcode):
	Remove calculated check.

	* Remove global need for tmpl_hdr_session and